2.6.7
 - setup: bump dclab from 0.34.2 to 0.34.3 (set R_HOME)
 - build: bumpy rpy2 from 3.4.2 to 3.4.5
2.6.6
 - fix: false alarms about wrong pyqtgraph version on startup
   (removed the responsible code, because there are now more regular
   releases of pyqtgraph)
 - enh: allow passing session files, datasets, and filters via the
   command line (#88)
 - enh: associate the .so2 file format with Shape-Out on Windows (#88)
 - build: migrate to Inno Setup 6
 - ref: avoid pyqtgraph DeprecationWarning due to `translate`
2.6.5
 - fix: migrate to pg.ColorBarItem (with some manual patches from
   upstream) to resolve issues with SVG export (#87)
 - fix: units of viscosity is mPa*s (#91)
 - setup: bump pyqtgraph from 0.12.0 to 0.12.1
 - setup: bump dclab from 0.33.3 to 0.34.2
 - ci: fix build issues for macOS
2.6.4
 - fix: HTML-escape plot titles and axis labels (#82)
2.6.3
 - build: pin rpy2 to 3.4.2 on Windows (#84)
2.6.2
 - setup: migrate to pyqtgraph 0.12.0
 - setup: bump dclab from 0.33.1 to 0.33.3
 - docs: fix rtd build
2.6.1
 - setup: remove deprecated setup.py test
 - setup: bump dclab to 0.33.1 (filters were ignored when exporting
   trace data to hdf5,
   see https://github.com/ZELLMECHANIK-DRESDEN/DCKit/issues/17)
2.6.0
 - feat: add background correction in quickview (#54)
 - fix: workaround for different plot widths due to title label (#33)
2.5.2
 - build: add pyinstaller hook for pyqtgraph
2.5.1
 - fix: preferences dialog did not open in macOS App bundle (#76)
 - enh: disable R settings in preferences dialog if rpy2 is missing
 - build: bump dclab from 0.29.1 to 0.32.4 (this should have happened
   in the 2.5.0 release which introduced R-lme4 analysis)
 - build: bump pyqtgraph to commit c1900 (post 0.11.1)
   which mainly improves plot export (#59)
 - tests: introduce manual tests that require a human in "tests-manual"
 - ref: key [calculation]: "emodulus model" is deprecated in dclab
 - ref: use "lut_identifier" instead of deprecated "method" keyword when