@@ -1,4 +1,5 @@
 2.6.7
+ - fix: correctly handle missing features on data export (#80)
  - setup: bump dclab from 0.34.2 to 0.34.3 (set R_HOME)
  - build: bumpy rpy2 from 3.4.2 to 3.4.5
 2.6.6
